--- a/closet.html
+++ b/closet.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type= "text/css" href="closet.css">
   </head>
   <body>
-    <!-- --------------- navigation--------------  -->
+    <!-- --------------- navigation-------------- - -->
     <nav>
       <div class="hover-content">
         <h2>WALK-IN CLOSET</h2>
